# libosmo-crypt-a53

./: Makefile.am  README.md  configure.ac  libosmo-crypt-a53.pc.in
src/: Makefile.am  a53f.c  a53f.h  kasumi.c  kasumi.h  kgcore.c  osmocom.c
